# tei-python

./: README.md  pyproject.toml
tei/: __init__.py  client.py  types.py
