[tool.poetry]
name = "tei"
version = "0.1.0"
description = "Hugging Face Text Embedding Inference Python Client"
license = "Apache-2.0"
authors = ["Olivier Dehaene <olivier@huggingface.co>", "Sam Ulrich <samson98ulrich@gmail.com>"]
maintainers = ["Olivier Dehaene <olivier@huggingface.co>", "Sam Ulrich <samson98ulrich@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gage-technologies/tei-python"
repository = "https://github.com/gage-technologies/tei-python"


[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10"
aiohttp = "^3.8"
huggingface-hub = ">= 0.12, < 1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
